@@ -97,6 +97,7 @@
 	* Added feature #37845: Allow manual sorting of the facet options, credits Stefan Galinksi
 	* Fixed a crash in the reports module for the case when a site has no TypoScript template
 	* Fixed issue #37107: PHP Warning: Outdated Ext.Direct API inclusion, credits Stefan Galinksi
+	* Fixed bug #38290: Empty typoscript for facet leads to fatal error when rendering through facet view helper
 
 2012-07-20  Stefan Sprenger  <stefan.sprenger@dkd.de>
 
